--- a/resources/styles/class_styles.css
+++ b/resources/styles/class_styles.css
@@ -73,6 +73,9 @@
 .left--side{
   width: 50%;  
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .right--side{
   background: url(../images/s1-right.jpg) center no-repeat; 
@@ -86,4 +89,11 @@
   font-size: 35px;
   line-height: 43.2px;
   font-weight: 600;
+}
+.left--side-content{
+  font-size: 14px;
+  line-height: 19.6px;
+}
+.link{
+  color: #ED4C5C;
 }
