--- a/resources/styles/class_styles.css
+++ b/resources/styles/class_styles.css
@@ -51,14 +51,14 @@
   padding: 0 250px;
   text-align: center;
 }
-.part{
+.p-1s-1{
   position: relative;
-  height: 50vh;
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  margin: 40px 0px;
 }
 .play{
   position: absolute;
@@ -96,4 +96,32 @@
 }
 .link{
   color: #ED4C5C;
+}
+.p-1s-2{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #FAFAFA;
+}
+.box{
+  height: 250px;
+  width: 350px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 8px;
+}
+.box:nth-of-type(1){
+  background-image: url('../images/box-1.jpg'); 
+}
+.box:nth-of-type(2){
+  background-image: url('../images/box-2.jpg'); 
+}
+.box:nth-of-type(3){
+  background-image: url('../images/box-3.jpg'); 
+}
+
+.box-container{
+  display: flex;
+  flex-direction: row;
 }
