--- a/resources/styles/class_styles.css
+++ b/resources/styles/class_styles.css
@@ -130,6 +130,8 @@
 .box-content{
   position: absolute;
   top: 50%;
+  left: 50%;
+  transform: translate(-50%, 25%);
   width: 250px;
   border-radius: 8px;
   height: 150px;
