--- a/resources/styles/class_styles.css
+++ b/resources/styles/class_styles.css
@@ -129,11 +129,30 @@
 }
 .box-content{
   position: absolute;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
   top: 50%;
   left: 50%;
   transform: translate(-50%, 25%);
-  width: 250px;
+  width: 293px;
   border-radius: 8px;
-  height: 150px;
-  background-color: rgb(194, 192, 192);
+  height: 198px;
+  background-color: #fff;
+  box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1);
+  padding: 30px 25px 20px;
+}
+.box-content--heading{
+  font-weight: 700;
+  font-size: 18px;
+  text-align: center;
+  line-height: 21.6px;
+}
+.box-content--text{
+font-size: 12px;
+  text-align: center;
+  line-height: 18px;}
+.btn-box{
+  color: #ED4C5C;
+  text-align: center;
 }
