--- a/resources/styles/tag_styles.css
+++ b/resources/styles/tag_styles.css
@@ -41,3 +41,11 @@ section{
 a{
   text-decoration: none;
 }
+/* h1{
+  text-align: center;
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 43.2px; 
+  color: black;
+} */
+
