--- a/resources/styles/class_styles.css
+++ b/resources/styles/class_styles.css
@@ -163,3 +163,41 @@ font-size: 12px;
   color: #ED4C5C;
   text-align: center;
 }
+.s2-box{
+  position: relative;
+}
+.s2-box>h1{
+  font-size: 100px;
+  line-height: 120px;
+  text-align: center;
+  font-weight: 700;
+  color: rgba(16, 16, 16, 0.08);
+}
+.s2-frame{
+  position: absolute;
+  display: block;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -80%);
+  padding-bottom: 50px;
+  height: 100px;
+  width: 100px;
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.s2-frame:nth-of-type(1){
+  background-image: url('../images/FrameCLOUDSECURE.png');
+}
+.s2-frame:nth-of-type(2){
+  background-image: url('../images/FrameSECURE.png');
+}
+.s2-frame:nth-of-type(3){
+  background-image: url('../images/VectorPDF.png');
+}
+.s2-frame:nth-of-type(4){
+  background-image: url('../images/VectorCSV.png');
+}
+.s2-box-content{
+  height: 150px;
+  width: 200px;
+}
