--- a/resources/styles/class_styles.css
+++ b/resources/styles/class_styles.css
@@ -193,10 +193,12 @@ font-size: 12px;
   font-size: 18px;
 }
 .section--3{
+  display: flex;
   background-color: #ED4C5C;
-  height: 50vh;
+  height: auto;
   color: white;
   text-align: left;
+  width: 100%;
 }
 .s3--leftSide{
   width: 40%;
@@ -220,5 +222,26 @@ font-size: 12px;
 
 }
 .s3--rightSide{
-  width: 60%;
+  display: flex;
+    width: 60%;
+    position: relative;
+}
+.s3--img{
+  opacity: 0.5;
+border-radius: 15px;
+width: 483px;
+height: 267px;
+background-repeat: no-repeat;
+background-size: cover;
+}
+.s3--img:nth-of-type(1){
+  background-image: url('../images/s3-left.jpg');
+}
+.s3--img:nth-of-type(2){
+width: 445px;
+height: 311px;
+z-index: 1;
+}
+.s3--img:nth-of-type(3){
+  background-image: url('../images/s3-right.jpg');
 }
