--- a/resources/styles/class_styles.css
+++ b/resources/styles/class_styles.css
@@ -288,26 +288,60 @@
   background-image: url('../images/s3-right.jpg');
 }
 
-.section--4{
+.section--4 {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   height: 50vh;
   width: 100%;
 }
-.half{
-display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+
+.s4--content-left {
+  width: 50%;
 }
-.s4--content-right{
+
+
+
+.s4--content-right {
+  /* display: flex;
+  flex-direction: row;
+  justify-content: space-between; */
+  width: 50%;
+
+}
+.half {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  width: 100%;
+}
+.full{
+  width: 100%;
+  flex-direction: column;
 }
 .input--half{
-  /* width: 50%; */
+  width: 50%;
+  margin-bottom: 30px;
+  border: 1px solid #333333;
+  box-sizing: border-box;
+  border-radius: 6px;
 }
-.input--full{
+
+.input--half:nth-of-type(1) {
+  margin-right: 15px;
+}
+
+.input--half:nth-of-type(2) {
+  margin-left: 15px;
+}
+
+.input--full {
   width: 100%;
+  margin-bottom: 30px;
+  border: 1px solid #333333;
+  box-sizing: border-box;
+  border-radius: 6px;
+}
+
+.s4-input {
+  height: 60px;
 }
