--- a/resources/styles/class_styles.css
+++ b/resources/styles/class_styles.css
@@ -345,3 +345,13 @@
 .s4-input {
   height: 60px;
 }
+.s4-input::placeholder {
+  padding: 20px;
+font-family: Lato;
+font-style: normal;
+font-weight: normal;
+font-size: 16px;
+line-height: 19px;
+
+color: rgba(19, 39, 67, 0.5);
+}
