--- a/resources/styles/class_styles.css
+++ b/resources/styles/class_styles.css
@@ -294,7 +294,8 @@
   justify-content: space-between;
   height: 500px;
   width: 100%;
-  padding-top: 100px;
+  padding-top: 150px;
+  margin-bottom: 130px;
 }
 
 .s4--content-left {
